@@ -1,10 +1,13 @@
 package com.github.supercodingteam1.repository.UserDetails;
 
+import com.github.supercodingteam1.repository.entity.user.User;
 import lombok.*;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -14,30 +17,42 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 @NoArgsConstructor
 @ToString
+@Slf4j
 public class CustomUserDetails implements UserDetails {
 
+    private User user;
     private Integer userId;
     private String email;
     private String password;
-    private List<String> authorities;
+    private Collection<? extends GrantedAuthority> authorities;
 
     public Integer getUserId() {
         return userId;
     }
 
+    public CustomUserDetails(User user) {
+        this.userId = user.getUserId();
+        this.email = user.getEmail();
+        this.password = user.getPassword();
+        this.authorities = getAuthorities();
+        this.user = user;
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return authorities.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+        return authorities.stream()
+                .map(grantedAuthority -> new SimpleGrantedAuthority(grantedAuthority.getAuthority()))
+                .toList();
     }
 
     @Override
     public String getPassword() {
-        return this.password;
+        return user.getPassword();
     }
 
     @Override
     public String getUsername() {
-        return this.email;
+        return user.getUserName();
     }
 
     @Override
@@ -59,4 +74,5 @@ public class CustomUserDetails implements UserDetails {
     public boolean isEnabled() {
         return true;
     }
+
 }
